--- a/infra/package.json
+++ b/infra/package.json
@@ -19,8 +19,10 @@
     "source-map-support": "^0.5.21"
   },
   "devDependencies": {
+    "@types/aws-lambda": "^8.10.130",
     "@types/node": "^20.11.24",
     "aws-cdk": "^2.120.0",
+    "esbuild": "^0.19.12",
     "ts-node": "^10.9.2",
     "typescript": "^5.3.3"
   }
