--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "node": ">=20.0.0"
   },
   "devDependencies": {
+    "@types/aws-lambda": "^8.10.130",
     "@types/jest": "^29.5.12",
     "@types/node": "^20.11.24",
     "@typescript-eslint/eslint-plugin": "^7.1.0",
